--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "ngrok": "ngrok http 3000"
   },
   "dependencies": {
+    "mqtt": "^5.2.2",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
